--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="https://youtu.be/3nGDX6h11gU" class="image fit thumb"><img src="images/thumbs/djamrekk.png " alt="" /></a>
 							<h3>Scratch 3, programmation par bloc et roman graphique.</h3>
-							<h5>Formation d'initiation au roman graphique dirigé à des collégiens, ce module devant se réaliser hors connexion, a nécessité une refonte totale de son mode de présentation.</br>
+							<h5>Formation d'initiation au roman graphique dirigée à des collégiens, ce module devant se réaliser hors connexion, a nécessité une refonte totale de son mode de présentation.</br>
 								En effet, le matériel didactique devant être projeté sur écran pour être visible par les nombreux participants, 50 élèves à la fois, j'ai réalisé pour chaque séance des vidéos, comprenant les leçons, les capsules et les aides à l'apprentissage.</h5>
 					</div>
 					</section>
