--- a/portfolio_par_outils.html
+++ b/portfolio_par_outils.html
@@ -91,7 +91,7 @@
           <iframe class="responsive-iframe" src="https://scratch.mit.edu/projects/705087543/embed"></iframe>
         </div>
         <h3>Condition double, expressions booléennes et opérateurs de comparaison, cycle 4.</h3>
-        <h5>Les élèves joue le jeu autant de fois qu'ils le souhaitent afin de deviner le code. Au bout de 15 minutes une aide est donnée par le formateur (la valeur à retrouver par exemple).</br>
+        <h5>Les élèves jouent le jeu autant de fois qu'ils le souhaitent afin de deviner le code. Au bout de 15 minutes une aide est donnée par le formateur (la valeur à retrouver par exemple).</br>
           Dernière étape de la leçon consistant en une remobilisation des connaissances précédemment acquises.</h5>
     </div>
   </section>
